# seekable_reader

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml
src/: lib.rs
tests/: audio_probe.rs
